# agentcoach

./: .gitignore  Graph.py  LICENSE  Makefile  Test epic1.py  pyproject.toml
docs/: Architecture · MD  Epic1 guide.md  Epic2 bugfixes.md
src/agentcoach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agents/: __init__.py  profile_manager.PY
src/config/: llm_gateway.py  prompts.py  settings.py
src/memory/: __init__.py  memory_manager.py  persistence.py  token_budget.py
src/models/: state.py
tests/: test_epic2.py  test_smoke.py
tests/agents/: base.py  router .py
