[project]
name = "agentcoach"
version = "0.1.0"
description = "Multi-agent AI Interview Coach"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core LLM
    "openai>=1.30.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "langchain-community>=0.2.0",
    
    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    
    # Data & Embeddings
    "tiktoken>=0.7.0",
    "faiss-cpu>=1.8.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    
    # Utilities
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"